--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "glossophilia",
+  "name": "oneroad",
   "version": "0.0.1",
-  "description": "An dictionary app for folks who don't need a dictionary",
+  "description": "Using inline SVG's to teach road safety",
   "main": "src/app.js",
   "scripts": {
-    "dev": "NODE_ENV=develop webpack-dev-server --devtool eval --hot --progress --colors --port 9000",
-    "deploy": "NODE_ENV=production webpack -p"
+    "dev": "node --harmony ./webpack/dev-server.js",
+    "build": "./node_modules/.bin/webpack --progress --stats --config ./webpack/prod.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/btburton42/glossophilia.git"
+    "url": "https://github.com/btburton42/oneroad.git"
   },
   "keywords": [
     "react",
@@ -20,31 +20,41 @@
   "author": "Tyler Burton",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/btburton42/glossophilia/issues"
+    "url": "https://github.com/btburton42/oneroad/issues"
   },
-  "homepage": "https://github.com/btburton42/glossophilia",
-  "dependencies": {
-    "alt": "^0.15.5",
-    "babel": "^5.1.9",
-    "firebase": "^2.2.4",
-    "koa": "^0.19.1",
-    "react": "^0.13.1",
-    "react-router": "^0.13.2"
-  },
+  "homepage": "https://github.com/btburton42/oneroad",
   "devDependencies": {
-    "autoprefixer-core": "^5.1.8",
+    "alt": "^0.15.5",
+    "autoprefixer-loader": "^1.2.0",
+    "babel": "^5.1.9",
     "babel-core": "^5.1.9",
+    "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
     "css-loader": "^0.9.1",
     "csswring": "^3.0.3",
+    "debug": "^2.1.3",
+    "del": "^1.1.1",
+    "eslint": "^0.20.0",
+    "eslint-loader": "^0.11.1",
+    "eslint-plugin-react": "^2.2.0",
+    "esprima-fb": "^14001.1.0-dev-harmony-fb",
     "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "^0.7.0",
     "file-loader": "^0.8.1",
+    "fs-extra": "^0.18.2",
     "gulp": "^3.8.11",
+    "html-webpack-plugin": "^1.3.0",
     "imports-loader": "^0.6.3",
+    "jscs": "^1.13.1",
+    "jscs-loader": "0.0.5",
     "json-loader": "^0.5.1",
     "node-sass": "^2.1.1",
+    "object-assign": "^2.0.0",
     "postcss-loader": "^0.3.0",
     "raw-loader": "^0.5.1",
+    "react": "^0.13.1",
+    "react-hot-loader": "^1.2.5",
+    "react-router": "^0.13.2",
     "react-tools": "^0.13.1",
     "sass-loader": "^0.6.0",
     "script-loader": "^0.6.1",
