--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "no-unused-expressions": false,
     "no-new": 1,
     "no-debugger": false,
+    "no-unused-vars": false,
 
     "react/display-name": 2,
     "react/jsx-boolean-value": 2,
