--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jscs": "^1.13.1",
     "jscs-loader": "0.0.5",
     "json-loader": "^0.5.1",
-    "node-sass": "^2.1.1",
+    "node-sass": "^3.0.0-beta.7",
     "object-assign": "^2.0.0",
     "postcss-loader": "^0.3.0",
     "raw-loader": "^0.5.1",
@@ -56,7 +56,7 @@
     "react-hot-loader": "^1.2.5",
     "react-router": "^0.13.2",
     "react-tools": "^0.13.1",
-    "sass-loader": "^0.6.0",
+    "sass-loader": "^1.0.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.9.0",
     "url-loader": "^0.5.5",
